# stint

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  blog_why_stint.md  prek.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: README.md  ci.yml  publish.yml
docs/: blog_why_stint.devto.md  competitive-landscape.md  show-hn.md
examples/: README.md  devel.env.example.yaml  platform.py
pensum/: __init__.py  engine.py  exceptions.py  fields.py  validate.py
pensum/autogen/: loader.py  stamp.py
pensum/cli/: cmd_reflect.py  cmd_revision.py  cmd_stamp.py  cmd_upgrade.py  env_config.py
pensum/migrations/: base.py  context.py  loader.py  runner.py
pensum/query/: adf.py  columns.py  expr.py  hydrate.py  payload.py  select.py  session.py  sync.py
pensum/schema/: field_config.py  issuetype.py  project.py  screen.py
pensum/state/: file.py  lock.py
scripts/: test-all.sh
stint/: __init__.py  engine.py  exceptions.py  fields.py  registry.py  validate.py
stint/autogen/: __init__.py  desired.py  diff.py  emit.py  loader.py  stamp.py
stint/cli/: __init__.py  app.py  cmd_reflect.py  cmd_revision.py  cmd_stamp.py  cmd_upgrade.py  cmd_validate.py  env_config.py  main.py
stint/client/: __init__.py  auth.py  http.py
stint/dialects/: __init__.py  base.py
stint/migrations/: __init__.py  base.py  context.py  exceptions.py  loader.py  op.py  runner.py
stint/query/: __init__.py  columns.py  expr.py  hydrate.py  payload.py  select.py  session.py  sync.py
stint/schema/: __init__.py  _meta.py  field_config.py  issuetype.py  project.py  screen.py
tests/: test_m0_spike.py  test_m1_cli.py  test_m1_cloud.py  test_m1_dialect.py  test_m1_engine.py  test_m1_state.py  test_m2_downgrade.py  test_m2_migrations.py  test_m2_op_surface.py  test_m2_polish.py  test_m3_autogen.py  test_m3_autogenerate_cli.py  test_m3_multi_parent_graph.py  test_m3_revision_cli.py  test_m3_stamp.py  test_m4_polish.py  test_m5_query.py  test_m6_writes.py  test_m7_tmp.py  test_m8_sync_session.py  test_m8_validate_cli.py  test_schema_loader.py
(+11 files in other folders)
